--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@nuxt/ui": "3.0.0-beta.2",
-    "@unhead/vue": "2.0.0-rc.1",
-    "tailwindcss": "^4.0.9",
+    "@nuxt/ui": "^3.0.0-beta.3",
+    "@unhead/vue": "2.0.0-rc.7",
+    "tailwindcss": "^4.0.12",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -20,14 +20,14 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.21.0",
-    "eslint-config-prettier": "^10.0.2",
+    "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-vue": "^9.32.0",
+    "eslint-plugin-vue": "^10.0.0",
     "globals": "^16.0.0",
     "prettier": "3.5.3",
-    "typescript": "~5.7.2",
+    "typescript": "~5.8.2",
     "typescript-eslint": "^8.26.0",
-    "vite": "^6.2.0",
-    "vue-tsc": "^2.2.4"
+    "vite": "^6.2.1",
+    "vue-tsc": "^2.2.8"
   }
 }
