--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-vue": "^10.0.0",
     "globals": "^16.0.0",
     "prettier": "3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "~5.8.2",
     "typescript-eslint": "^8.26.0",
     "vite": "^6.2.1",
