--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@nuxt/ui": "^3.0.0-beta.3",
+    "@types/js-cookie": "^3.0.6",
     "@unhead/vue": "2.0.0-rc.7",
+    "js-cookie": "^3.0.5",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.0.12",
     "vue": "^3.5.13",
