--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "pinia": "^3.0.1",
     "tailwindcss": "^4.0.12",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
