--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "~5.8.2",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.2.1",
+    "vitest": "^3.0.8",
     "vue-tsc": "^2.2.8"
   }
 }
